Changes to fix scrollbar issue #1 w/ firefox

--- a/css/site.css
+++ b/css/site.css
@@ -17,8 +17,10 @@ body {
     background-color: black;
     /* Code below fixes scroll bounce while maintaining pull to refresh
     /* on mobile versions of chrome */
-    overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
+
+    overflow: hidden;
 
      /* Temporary solution to disable IOS double tap zoom on the gallery */
      /* scrollbar. Need to figure out how to disable it just on that element */
@@ -413,7 +415,7 @@ a.target-burger ul.buns li.bun:last-child {
 
 .featured-gallery-title {
     flex: 1 0 40%;
-    display: block;
+    /* display: block; */
     font-family: 'roboto', sans-serif;
     font-size: 2.2em;
     font-weight: 500;
@@ -423,11 +425,13 @@ a.target-burger ul.buns li.bun:last-child {
 }
 
 .view-gallery-btn {
+    /* flex: 1 0 60%; */
     flex: 1 0 60%;
+    min-height: 0;
     border: 2px solid white;
     border-radius: 2px;
     width: 9.5em;
-    height: 3.8em;
+    /* height: 3.8em; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -475,7 +479,7 @@ a.target-burger ul.buns li.bun:last-child {
     z-index: 2;
    
     /* For WebKit implementations, provide inertia scrolling */
-    /* -webkit-overflow-scrolling: touch; */
+    -webkit-overflow-scrolling: touch; 
 }
 
 /* Do not display scrollbar */
@@ -488,9 +492,11 @@ a.target-burger ul.buns li.bun:last-child {
     /* relative position is necessary to prevent flex-items from overlapping */
     /* on window resize */
     position: relative;
-    flex: 1 0 auto;
+    /* flex: 1 0 auto;
+    width: auto; */
+    flex: 1 0 0px;
     width: auto;
-    min-width: 10rem;
+    min-width: 12rem;
     height: 100%;
     padding-top: .6rem;
     padding-left: 1rem;
@@ -499,6 +505,12 @@ a.target-burger ul.buns li.bun:last-child {
     display: -ms-flexbox;
     display: flex;
     flex-direction: column;  
+}
+
+.card a {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .card:last-child {
@@ -529,6 +541,7 @@ a.target-burger ul.buns li.bun:last-child {
     font-family: 'object-fit: cover;';
     cursor: pointer;
 }
+
 
 
 /****** CSS for Story pages ******/
