--- a/css/swiper.css
+++ b/css/swiper.css
@@ -17,6 +17,9 @@
   padding: 0;
   /* Fix of Webkit flickering */
   z-index: 1;
+  overflow: hidden !important;
+  height: 100%;
+  width: 100%;
 }
 .swiper-container-no-flexbox .swiper-slide {
   float: left;
